objects/EXPRN__Trigger_Type__c.object
<CustomObject>
    <description>Captures different alert types</description>
    <fields>
        <fullName>EXPRN__BIQ_Configuration__c</fullName>
        <label>BIQ Configuration</label>
        <referenceTo>EXPRN__BIQ_Configuration__c</referenceTo>
        <relationshipLabel>Experian Trigger Types</relationshipLabel>
        <relationshipName>Trigger_Types</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EXPRN__Trigger_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Trigger Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Trigger_Sub_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Trigger Sub Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Experian Trigger Type</label>
    <listViews>
        <fullName>EXPRN__All</fullName>
        <columns>NAME</columns>
        <columns>EXPRN__Trigger_Code__c</columns>
        <columns>EXPRN__Trigger_Sub_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>EXPRN__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Experian Trigger Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>